ray semantics